--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@
     background-color:rgb(0, 183, 255) ;
     text-align: center;
     padding: 6px;
+    border-bottom: 0;
     
     
 }
@@ -12,7 +13,7 @@
 
 #div2
 {
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     
    
    background-color:rgb(0, 247, 255);
@@ -20,11 +21,19 @@
    float: left;
    padding-top: 50px;
    text-align: justify;
+ padding-bottom: 120px;
   
    
     
 }
 
+body
+{
+   font-family:Verdana, Geneva, Tahoma, sans-serif;
+   font-weight:500;
+   font-style: oblique;
+
+}
 
 #div3  /SECTION IMPO/
 {
@@ -45,7 +54,7 @@
     
     background-color: yellowgreen;
     text-align: center;
-    margin-top: -10%;
+    margin-top: -1%;
     clear:both;
    
 }
@@ -62,17 +71,20 @@
 .souligner
 {
    font-style: oblique;
-   font-family: Verdana, Geneva, Tahoma, sans-serif;
    position: relative;
 }
-
-.souligner ::after
+body
 {
-   content: ".....";
+   font-family:Verdana, Geneva, Tahoma, sans-serif;
+}
+souligner ::after
+{
+   content: "......";
    color: black;
-   height: 10px;
-   width: 10px;
+   height: 60px;
+   width: 60px;
    position: absolute;
+   
 }
  #endr
  {
@@ -136,3 +148,34 @@
    font-size: 30px;
    font-weight: bold;
 }
+
+figure
+{
+position: relative;
+float: left;
+margin-left:20px;
+margin-bottom: 20px;
+
+}
+figcaption
+{
+   font-weight: bold;
+   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+#realseize
+{
+   width: 120px;
+   height: 100px;
+}
+.Imageth
+{
+   
+   margin-top: -120px;
+   display:flex;
+   justify-content: center;
+   
+}
+
+img:hover {
+   border: 6px solid black;
+ }
