--- a/css/style.css
+++ b/css/style.css
@@ -179,3 +179,13 @@ figcaption
 img:hover {
    border: 6px solid black;
  }
+ .centerd
+ {
+     display: block;
+     margin-left: auto;
+     margin-right: auto;
+     height: 100%;
+     width:70%;
+     
+     
+ }
